--- a/packages/suggest-fe/package.json
+++ b/packages/suggest-fe/package.json
@@ -14,7 +14,8 @@
     "isbot": "^5.1.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "7.0.2-pre.0"
+    "react-router": "7.0.2-pre.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@react-router/dev": "7.0.2-pre.0",
